Revision history for Perl extension JavaScript::QuickJS:

0.08
- Set strict mode to always-on.

0.07 Mon 25 Apr 2022
- Add ability to customize base path for ES6 module imports.

0.06 Fri 22 Apr 2022
- Fix compatibility with old Linuxes (e.g., CentOS 7 and CloudLinux 6).

0.05 Thu 7 Apr 2022
- Fix helpers() method.
- Fix memory leak when std/os/helpers failed.
- Fix bad assert check.

0.04 Mon 4 Apr 2022
- No production changes.
- Fix typo’d test from 0.03.

0.03 Mon 4 Apr 2022
- Fix number conversion in 32-bit, non-64-bit-int perls.
- Fix conversion of Perl “magic” variables to JavaScript.
- Add more tests against number conversion.
- Refine Perl->JS typing logic to agree with 5.36 serialization.
- Patch QuickJS to support FreeBSD, OpenBSD, and Cygwin.

0.02 Mon 28 Mar 2022
- Documentation fixes

0.01 Mon 28 Mar 2022
- Initial release