@@ -1,5 +1,7 @@
 configure_requires 'ExtUtils::MakeMaker::CPANfile';
 configure_requires 'File::Slurper';
 configure_requires 'File::Which';
+
+test_requires 'Types::Serialiser';
 test_requires 'Test::FailWarnings';
 test_requires 'Test::Deep';
