@@ -2,6 +2,7 @@ Revision history for Perl extension JavaScript::QuickJS:
 
 0.08
 - Set strict mode to always-on.
+- Teach Perl->JSON conversion to recognize Types::Serialiser booleans.
 
 0.07 Mon 25 Apr 2022
 - Add ability to customize base path for ES6 module imports.
